2008-03-14  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-utils.c (phonemgr_utils_address_is):
	Fix utter stupidness checking whether an address is
	actually a device path

2008-03-13  Bastien Nocera  <hadess@hadess.net>

	* README: update build dependencies
	* configure.in:
	* src/ui.c (create_send_dialog): Add spell checking
	to the "Send message" text area, based on patch by
	Daniel Schierbeck <daniel.schierbeck@gmail.com>
	(Closes: #508816)

============ Version 0.50

2008-03-10  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.50
	* data/Makefile.am: Fix distcheck

2008-03-08  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-utils.c (find_service_channel):
	Don't use the public browse group to look for the Serial/DUN
	channel (Closes: #511220)

2008-03-08  Bastien Nocera  <hadess@hadess.net>

	* libgsm/Makefile.am:
	* libgsm/test-sdp-search.c (main): Add a test program for
	finding out the serial channel on a remote device

2008-03-07  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-utils.c (phonemgr_utils_get_serial_channel),
	(phonemgr_utils_get_gnapplet_channel): Add debug for which
	channel ends up being selected

2008-03-07  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-utils.c (phonemgr_utils_driver_for_model):
	Change message when no driver is mentioned in the phones.xml
	to be less scary

2008-01-07  Bastien Nocera  <hadess@hadess.net>

	* telepathy/im-channel.c: (phoney_im_channel_set_property):
	Patch from Simon McVittie <simon.mcvittie@collabora.co.uk>
	to avoid warnings with telepathy >= 0.7.1 (Closes: #507258)

2007-12-14  Bastien Nocera  <hadess@hadess.net>

	* src/e-contact-entry.c: Update from contact-lookup-applet

2007-12-02  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Add requirement for bluez, we would fail
	building if bluez-libs wasn't new enough, or gnokii wasn't
	built with Bluetooth support (Closes: #500941)

2007-11-22  Bastien Nocera  <hadess@hadess.net>
