@@ -1,3 +1,9 @@
+2008-03-18  Bastien Nocera  <hadess@hadess.net>
+
+	* libgsm/phonemgr-listener.c
+	(phonemgr_listener_sms_notification_soft_poll):
+	Spin less, fix some ms/microseconds confusion
+
 2008-03-14  Bastien Nocera  <hadess@hadess.net>
 
 	* libgsm/phonemgr-utils.c (phonemgr_utils_address_is):
